--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,7 @@ body{
 /* header */
 header{
     height: 25vh;
-    width: 100vw;
+    
     /* border:2px solid red; */
     overflow: auto;
 }
@@ -24,8 +24,6 @@ header{
 .connect .link{
     display: flex;
     align-items: center;
-    padding: 4px;
-    
 }
 .connect .contact{
     display: flex;
@@ -34,15 +32,27 @@ header{
     color: white;
 }
 .connect .link a i{
-    padding: 10px;
+    padding: 0px 13px;
+    font-size: 17px;
+}
+.connect .link p{
+    padding: 0px 0px;
+    font-size: 17px;
 }
 .email , .phone {
     padding: 12px;
+    font-size: 17px;
+}
+
+#lang select{
+    border: none;
+    background-color: rgb(11, 194, 179);
+    color: white; 
 }
 .navbar .item{
-    padding: 0px;
-    margin:15px 23px ;
-    flex-basis: 40%;
+    padding: 0px 0px;
+    margin: 0px 13px;
+    margin-right: 13px;
 }
 i{
     color: honeydew;
@@ -50,6 +60,7 @@ i{
 .navbar .logo{
     height: 100%;
     width:20%;
+    margin-left: 100px;
 }
 
 
@@ -79,7 +90,7 @@ i{
    font-weight: bold;
 }
 .navbar :nth-child(3){
-    flex-basis: 19%;
+    flex-basis: 14%;
     
 }
 .navbar .btn {
@@ -100,11 +111,14 @@ i{
     flex-direction: column;
     justify-content: center;
     /* border: 2px solid green; */
-   padding: 10px 200px;
+   padding: 10px 10%;
     height: 75vh;
     color: white;
     position: relative;
     
+}
+#home .review .home-content{
+    width: 80%;
 }
 .btn{
     cursor: pointer;
@@ -122,7 +136,7 @@ i{
      position: absolute;
      top: 0px;
      left:0px;
-background: url(/image/home1.jpg) no-repeat center center/cover;
+background: url(../image/home1.jpg) no-repeat center center/cover;
 height: 100%;
 width: 100%;
 z-index: -1;
@@ -130,7 +144,7 @@ z-index: -1;
 
  /* *************Causes**************************** */
 
- #causes{width: 100vw;
+ #causes{
      display: flex;
      flex-direction: column;
      align-items: center;
@@ -167,7 +181,7 @@ z-index: -1;
 .causes-heading::after{
     content: "";
     position: absolute;
-    top: 86%;
+    top: 97%;
     left: 0%;
     width: 100%;
     height: 10%;
@@ -176,7 +190,7 @@ z-index: -1;
 }
 #causes .causes-para{
     font-size: 20px;
-    height: 3%;
+    height: 6%;
     color: grey;
 }
 #causes .causes .box img{
@@ -201,11 +215,22 @@ z-index: -1;
     
 }
 #causes .causes-btn{
+    width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
+.review{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 96%;
+}
+ .review i{
+    color:grey ;
+}
+
 /* **************volunteers************ */
 #volunteers .volunteers .box img{
     background-repeat: no-repeat;
@@ -266,7 +291,7 @@ color: rgb(86, 65, 65);
 #testimonials{
     display: flex;
     flex-direction: column;
-    width: 100vw;
+   
     align-items: center;
     position: relative;
     height: 70vh;
@@ -286,7 +311,7 @@ border-radius: 100px;
 }
 #testimonials::before{
     content: "";
-    background: url(/image/people-say-bg.jpg) no-repeat center center/cover;
+    background: url(../image/people-say-bg.jpg) no-repeat center center/cover;
     height:100%;
     z-index: -1;
     position: absolute;
@@ -322,7 +347,7 @@ border-radius: 100px;
 }
 /* ***********footer************** */
 footer{
-    width: 100vw;
+   
     color: white;
     background-color: #232323;
     height: 70vh;
@@ -351,7 +376,7 @@ footer .footer-box1 .box1-item p a{
 footer .footer-box2{
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     background: #000;
     height:12%;
 }
@@ -397,13 +422,10 @@ padding: 2%;
 footer p span{
     color: red;
 }
+.footer-box2 .box2-item{
+    margin: 0px 4rem;
+}
+.footer-box2 .box2-item:nth-child(2){
+    margin: 0px 4rem;
+} 
 
-.review{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    width: 80%;
-}
- .review i{
-    color:grey ;
-}
